name:               ez-couch
version:            0.3.0
author:             Nikita Volkov
maintainer:         nikita.y.volkov@mail.ru
build-type:         Simple
cabal-version:      >=1.8

library
  hs-source-dirs:   src
  ghc-options:      -O2
  extensions:       PatternGuards
  exposed-modules:  EZCouch
  other-modules:    Database.CouchDB.Conduit.View.Query
                    EZCouch.Doc
                    EZCouch.Action
                    EZCouch.BulkOperationsAction
                    EZCouch.Design
                    EZCouch.Encoding
                    EZCouch.Ids
                    EZCouch.Isolation
                    EZCouch.Model.Design
                    EZCouch.Model.Isolation
                    EZCouch.Model.View
                    EZCouch.Parsing
                    EZCouch.ReadAction
                    EZCouch.Time
                    EZCouch.Try
                    EZCouch.Types
                    EZCouch.View
                    Network.HTTP.Conduit.Request
                    Util.Logging
                    Util.PrettyPrint
  build-depends:    base == 4.5.*,
                    ghc-prim == 0.2.*,
                    basic-prelude >= 0.3.2.0 && < 0.4,
                    time == 1.4.*,
                    aeson == 0.6.*,
                    attoparsec-conduit == 0.5.*,
                    http-conduit == 1.8.*,
                    hslogger == 1.2.*,
                    old-locale == 1.0.*,
                    text == 0.11.*,
                    http-types == 0.7.*,
                    conduit == 0.5.*,
                    syb == 0.3.*,
                    containers == 0.4.*,
                    vector == 0.10.*,
                    unordered-containers == 0.2.*,
                    bytestring == 0.9.*,
                    attoparsec == 0.10.*,
                    blaze-builder == 0.3.*,
                    mtl == 2.1.*,
                    random == 1.0.*,
                    resourcet == 0.4.*,
                    string-conversions == 0.2.*,
                    classy-prelude >= 0.4.3,
                    classy-prelude-conduit >= 0.4
